--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -11,5 +11,11 @@
 }
 
 .backToHome {
-    margin: 3rem 0 0;
+    margin: 3rem 0 3rem;
+}
+
+.clearfix::before, .clearfix::after{
+    content: "";
+    display: table;
+    clear: both;
 }
